[package]
name = "art"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_framepace = "0.7.0"
heron = { version = "4.0.0", features = ["2d"] }
bevy-inspector-egui = "0.13.0"
rand = "0.8.5"
bevy_prototype_debug_lines = "0.8"
bevy_pancam = { version = "0.6.0", features = ["bevy_egui"] }
bevy_mouse_tracking_plugin = "0.4.0"
bevy_egui = "0.16"
particular = "0.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
